--- a/assect/img/stylescss/styles.css
+++ b/assect/img/stylescss/styles.css
@@ -1,7 +1,108 @@
-.block__elem1 {
-    border: 1px solid black;
+.header__browser {
+    width: 100vw;
 }
 
-.block__elem2 {
-    border: 1px solid red;
+.header-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
 }
+
+.header-container__logo {
+    display: block;
+    padding-top: 10px;
+    margin-right: 300px;
+}
+
+.header-container__buttom {
+    padding-top: 10px;
+}
+
+.main-container {
+    display: flex;
+    justify-content: space-between;
+    min-width: 500px;
+}
+
+
+.main-container__blok {
+    display: grid;
+    grid-row: repeat (3, 1fr);
+
+}
+
+.main-container__botton_img {
+    height: 84px;
+    width: 270px;
+    margin-left: 116px;
+    margin-top: 20px;
+}
+
+.main-container__text {
+    margin-left: 116px;
+    margin-top: 20px;
+    font-size: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.main-container__h1 {
+    margin-left: 116px;
+    font-size: 60px;
+}
+
+
+.main-container__input:hover {
+    opacity: 1;
+    transform: scale(1.5);
+}
+
+.navigation {
+    width: 100vw;
+    height: 10vh;
+    margin-left: 100px;
+}
+
+.navigation__href {
+    margin: 10px;
+    text-decoration: none;
+}
+
+.TitlePage {
+    margin-left: 125px;
+    margin-top: 100px;
+    font-weight: bold;
+    font-style: normal;
+
+
+}
+
+.container__section {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(365px, 1fr));
+    margin-left: 92px;
+}
+
+.card {
+    display: grid;
+    max-height: 450px;
+}
+
+.card__picture {
+    width: 365px;
+    height: 233px;
+}
+
+.card__p {
+    width: 250px;
+    margin-block: 0px;
+}
+
+.ContainerCardNews {
+    background-color: #EC615B;
+    width: 300px;
+    height: 150px;
+    margin-top: 20px;
+}
+
+.CardNews {
