--- a/assect/img/stylescss/styles.css
+++ b/assect/img/stylescss/styles.css
@@ -73,8 +73,6 @@
     margin-top: 100px;
     font-weight: bold;
     font-style: normal;
-
-
 }
 
 .container__section {
@@ -101,8 +99,56 @@
 .ContainerCardNews {
     background-color: #EC615B;
     width: 300px;
-    height: 150px;
+    height: 170px;
     margin-top: 20px;
 }
 
 .CardNews {
+    margin-top: 10px;
+    margin-left: 18px;
+}
+
+.cardNews__title {
+    font-size: 30px;
+    line-height: 120%;
+    margin-top: 22px;
+    color: #FFFFFF;
+}
+
+.cardNews__input {
+    margin-top: 10px;
+}
+
+.cardNews__input_fon {
+    width: 250px;
+    height: 30px;
+}
+
+.CardNews__button {
+    margin-top: 10px;
+    color: #FFFFFF;
+    background-color: #5222D0;
+    border-radius: 100px;
+    padding: 7px;
+    border: 1px solid #5222D0;
+}
+
+.footer {
+    margin-top: 40px;
+}
+
+.card__border_red {
+    border: 1px solid red;
+    width: 400px;
+    padding: 20px;
+    padding-right: 0px;
+}
+
+.card__border_rednoimg {
+    border: 1px solid red;
+    width: 400px;
+    position: relative;
+    left: -20px;
+    padding: 20px;
+    padding-right: 0px;
+}
