--- a/assect/img/stylescss/styles.css
+++ b/assect/img/stylescss/styles.css
@@ -15,6 +15,11 @@
     margin-right: 300px;
 }
 
+.header-container__logo:hover {
+    opacity: 1;
+    transform: scale(1.5);
+}
+
 .header-container__buttom {
     padding-top: 10px;
 }
